# brooklet

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.beads/: dolt-server.activity  metadata.json
.beads/backup/: backup_state.json  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl
.github/workflows/: claude-pr-review.yml  publish.yml  test.yml
docs/superpowers/plans/: 2026-03-22-pytest-adapter.md
docs/superpowers/specs/: 2026-03-22-pytest-adapter-design.md
examples/: ci_health_check.py
src/brooklet/: __init__.py  consumer.py  envelope.py  offsets.py  registry.py  stream.py  types.py
src/brooklet/contrib/: __init__.py  claude_analytics.py  pytest_analytics.py  scout.py
tests/: conftest.py  integration_smoke.py  pytest_fixtures.py  scout_helpers.py  test_consumer.py  test_consumer_follow.py  test_envelope.py  test_integration.py  test_offsets.py  test_produce.py  test_pytest_analytics.py  test_registry.py  test_scout.py  test_stream.py  test_types.py
tests/bdd/: conftest.py
tests/bdd/features/: glob_follow.feature  produce.feature  pytest_adapter.feature  scout.feature
tests/bdd/steps/: test_glob_follow.py  test_produce.py  test_pytest_adapter.py  test_scout.py
