# ABOUTME: Build configuration for brooklet — lightweight JSONL event streaming library
# ABOUTME: Defines dependencies, dev tools, and ruff/pytest settings

[project]
name = "brooklet"
version = "0.1.0"
description = "The SQLite of event streaming — consumer coordination on top of JSONL files"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "Joshua Oliphant"}]
keywords = ["jsonl", "streaming", "events", "consumer", "offsets"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "watchdog>=4.0",
]

[project.urls]
Repository = "https://github.com/joshuaoliphant/brooklet"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/brooklet"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.9",
]
