# ABOUTME: Build configuration for brooklet — lightweight JSONL event streaming library
# ABOUTME: Defines dependencies, dev tools, and ruff/pytest settings

[project]
name = "brooklet"
version = "0.1.0"
description = "The SQLite of event streaming — consumer coordination on top of JSONL files"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "Joshua Oliphant"}]
keywords = ["jsonl", "streaming", "events", "consumer", "offsets"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "rich>=14.3.3",
    "watchdog>=4.0",
]

[project.optional-dependencies]
rich = [
    "rich>=13.0",
]

[project.scripts]
brooklet-scout = "brooklet.contrib.claude_analytics:main"
brooklet-pytest = "brooklet.contrib.pytest_analytics:main"

[project.urls]
Repository = "https://github.com/joshuaoliphant/brooklet"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/brooklet"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "bdd: BDD acceptance tests",
    "ac-1: AC-1 Produce creates topic directory and writes event",
    "ac-2: AC-2 Produce auto-injects envelope fields",
    "ac-3: AC-3 Produce assigns monotonic sequence numbers",
    "ac-4: AC-4 Produce preserves existing envelope fields",
    "ac-5: AC-5 Produce appends atomically",
    "ac-6: AC-6 Produce auto-registers topic in the registry",
    "ac-7: AC-7 Produce and consume roundtrip",
    "ac-8: AC-8 Produce with source parameter",
    "ac-9: AC-9 Produce errors on name collision",
    "ac-10: AC-10 Path-style topic names create nested directories",
    "ac-11: AC-11 Topic names with path traversal are rejected",
    "ac-12: AC-12 Producing non-dict data raises TypeError",
    "ac-13: AC-13 Glob follow detects new lines in existing files",
    "ac-14: AC-14 Glob follow detects new files matching the pattern",
    "ac-15: AC-15 Glob follow maintains offset across restarts",
    "ac-16: AC-16 Glob follow catches up before tailing",
    "ac-17: AC-17 Scout scans sessions from a project path",
    "ac-18: AC-18 Scout reports token usage",
    "ac-19: AC-19 Scout reports tool call frequency",
    "ac-20: AC-20 Scout reports session duration and event counts",
    "ac-21: AC-21 Scout reports model usage breakdown",
    "ac-22: AC-22 Scout uses brooklet offsets for incremental processing",
    "ac-23: AC-23 Streaming log output",
    "ac-24: AC-24 Rich live table output",
    "ac-25: AC-25 Current session only mode",
    "ac-26: AC-26 Current session with follow and rich",
    "ac-27: AC-27 Follow mode for new sessions",
    "ac-28: AC-28 JSONL output via produce",
    "ac-29: AC-29 Configurable project path",
    "ac-pt-1: AC-PT-1 Register a single pytest report log",
    "ac-pt-2: AC-PT-2 Register a directory of report logs",
    "ac-pt-3: AC-PT-3 Filter to test outcomes only",
    "ac-pt-4: AC-PT-4 Incremental consumption across runs",
    "ac-pt-5: AC-PT-5 Appended events are consumable via offset tracking",
    "ac-pt-6: AC-PT-6 Summary stats per run",
]

[tool.pytest-bdd]
bdd_features_base_dir = "tests/bdd/features/"

[dependency-groups]
dev = [
    "pytest-bdd>=8.1.0",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.9",
]
